fix: fix viewport settings on ios

--- a/src/styles/Base.module.css
+++ b/src/styles/Base.module.css
@@ -16,9 +16,27 @@ html, body, #root {
   min-width: 360px;
   overflow-x: auto;
   position: relative;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+}
+
+
+@media (max-width: 767px) {
+  .app-container {
+    height: 100vh;
+    height: 100dvh;
+    min-height: 100vh;
+    min-height: 100dvh;
+    background-size: 100% 100%;
+    background-position: center center;
+  }
+}
+
+@supports (-webkit-touch-callout: none) {
+  .app-container {
+    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
+  }
 }
 
 .app-canvas {
@@ -26,7 +44,6 @@ html, body, #root {
   height: 100%;
   min-width: 360px;
 }
-
 
 @media (max-width: 359px) {
   * {
